welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value lenght
	for ( k <- 0 to lenght-1 ) {
                        ^