welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	for ( k <- 0 to lenght-1 ) {
		if (lookingfor) {
			return T(lenght -1 ) 
		} else return -1

		
		
	}
	}
